0.5
    breaking change in HTTP API: error JSON format changed to be message:"" instead of within info.errors, see updated api documentation
    made GHResponse.getMillis, Path.getMillis, GPXEntry.getMillis deprecated, use getTime instead
    in AbstractFlagEncoder, parse*() and getStr() are now deprecated, use properties.get* instead

0.4
    translation key turn changed and merged with left etc into turn_left, turn_right etc
    create location index before preparation in the GraphHopper class
    encodingManager.getSingle() is removed and flagEncoder list is no longer sorted, the first vehicle is used for CH preparation    
    removed LocationIndexTreeSC, use new LocationIndexTree(levelGraph.getBaseGraph(), directory) instead
    getLevel and setLevel do no longer automatically increase node count, use getNodeAccess.ensureNode for that
    normal algorithms are now possible on prepared graph use getBaseGraph, see #116
    GHResponse no longer has isFound method, use !hasErrors instead
    merged unused Edge class into EdgeEntry
    astar and astarbi are now both none-heuristic and take parameters for beeline approximation: astar.approximation=BeelineSimplification|BeelineAccurate or astarbi.approximation=...
    making GPX export according to the schema to support import from various tools like basecamp
    refactoring: AllEdgesIterator.getMaxId is now named getCount
    major change of internal API: moved method "Path RoutingAlgorithm.calcPath(QueryResult,QueryResult)" to a helper method QueryGraph.lookup, call queryResult.getClosestNode for the calcPath(nodeFrom,nodeTo) method
    no cachedWays and cachedPoints in Path anymore
    Path.findInstruction was moved to InstructionList.find
    if start and end point are identical an algorithm will find the path consisting only of one node, one point and one instruction (finish instruction), but without edges